crates/sith_python_parser/tests/snapshots/invalid_syntax@case_expect_indented_block.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/case_expect_indented_block.py
---
## AST

```
Module(
    ModModule {
        range: 0..43,
        body: [
            Match(
                MatchStmt {
                    range: 0..42,
                    subject: Name(
                        NameExpr {
                            range: 6..13,
                            id: Name("subject"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 19..26,
                            pattern: MatchValue(
                                PatternMatchValue {
                                    range: 24..25,
                                    value: NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 24..25,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [],
                        },
                        MatchCase {
                            range: 31..42,
                            pattern: MatchValue(
                                PatternMatchValue {
                                    range: 36..37,
                                    value: NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 36..37,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    ExprStmt {
                                        range: 39..42,
                                        value: EllipsisLiteral(
                                            EllipsisLiteralExpr {
                                                range: 39..42,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | match subject:
2 |     case 1:
3 |     case 2: ...
  |     ^^^^ Syntax Error: Expected an indented block after `case` block
  |
